@@ -4,6 +4,8 @@ languagechooser (1.03) UNRELEASED; urgency=low
    - Add Bosnian entries.
   * Alastair McKinstry
    - Typo in Irish entry.
+  * Petter Reinholdtsen
+   - Make sure the makefile uses the filenames in $(LIST) and $(L1NLIST).
 
  -- Alastair McKinstry <mckinstry@debian.org>  Sun,  2 Nov 2003 15:00:04 +0000
 
